--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,13 @@ services:
     networks:
       - sde_network
 
-  loader:
-    image: loader
-    container_name: loader
+  app:
+    image: app
+    container_name: app
     build:
-      context: ./containers/loader/
+      context: ./containers/app/
     volumes:
-      - ./:/opt/sde
+      - ./:/code
     environment:
       WAREHOUSE_USER: ${WAREHOUSE_USER}
       WAREHOUSE_PASSWORD: ${WAREHOUSE_PASSWORD}
